# noa

./: Cargo.toml  README-ja.md  README.md
init-system/initsys/: Cargo.toml
init-system/initsys/src/: boot_init.rs  boot_struct.rs  lib.rs  macros.rs  rhai_exec.rs
noa-cli/noa-inst/: Cargo.toml
noa-cli/noa-inst/src/: consts.rs  lib.rs  macros.rs  paths.rs  search.rs
noa-cli/noa-sync/: Cargo.toml
noa-cli/noa-sync/src/: checkhash.rs  download_file.rs  get_mirror.rs  lib.rs  macros.rs  uncompress.rs
noa-main/noa/: Cargo.toml
noa-main/noa/src/: main.rs
scripts/: noa-init-boot.sh
