[package]
name = "init_sys"
version = "0.1.0"
edition = "2024"
description = "Init system for noa"
authors = ["Ogasawara futo"]
license = "MIT"


[dependencies]
anyhow = "1"
rhai = "1.21.0"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"

