[package]
name = "noa_inst"
edition = "2024"
version = "0.1.0"
description = "noa install logic for noa"
authors = ["Ogasawara futo"]
license = "MIT"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
git2 = "0.20.0"
indicatif = "0.17.11"
reqwest = "0.12.12"
rustyline = "15.0.0"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
