[package]
name = "noa_sync"
edition = "2024"
version = "0.1.0"
description = "noa install logic for noa"
authors = ["Ogasawara futo"]
license = "MIT"

[dependencies]
tar = "0.4.44"
xz2 = "0.1.0"
indicatif = "0.17.11"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
blake3 = "1.6.1"
